[ES6] bound functions .name property should be "bound " + the target function's name https://bugs.webkit.org/show_bug.cgi?id=153796

Reviewed by Mark Lam.

Source/JavaScriptCore:

See http://tc39.github.io/ecma262/#sec-function.prototype.bind for details.
What the spec says:
```
function foo() { }
foo.bind(null).name === "bound foo"

(function bar() { }).bind(null).name === "bound bar"
```

* runtime/FunctionPrototype.cpp:
(JSC::functionProtoFuncToString):
* runtime/JSBoundFunction.cpp:
(JSC::hasInstanceBoundFunction):
(JSC::JSBoundFunction::create):
(JSC::JSBoundFunction::visitChildren):
(JSC::JSBoundFunction::toStringName):
* runtime/JSBoundFunction.h:
(JSC::JSBoundFunction::boundThis):
(JSC::JSBoundFunction::boundArgs):
(JSC::JSBoundFunction::createStructure):
* tests/es6.yaml:

LayoutTests:

* inspector/runtime/getProperties-expected.txt:
* platform/mac/http/tests/media/media-source/SourceBuffer-abort-readyState-expected.txt:
* platform/mac/http/tests/media/media-source/SourceBuffer-abort-removed-expected.txt:
* platform/mac/http/tests/media/media-source/SourceBuffer-abort-updating-expected.txt:
* platform/mac/http/tests/media/media-source/mediasource-sourcebuffer-mode-expected.txt:



Canonical link: https://commits.webkit.org/171892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196033 268f45cc-cd09-0410-ab3c-d52691b4dbfc